# ChangeLog for kde-misc/filelight
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/ChangeLog,v 1.17 2007/02/04 00:09:51 troll Exp $

*filelight-1.0 (04 Feb 2007)

  04 Feb 2007; Przemysław Maciąg <troll@gentoo.org>
  -files/filelight-1.0_beta6-pic.patch, -filelight-1.0_beta6.ebuild,
  -filelight-1.0_rc1.ebuild, +filelight-1.0.ebuild:
  Version bump (1.0). Desktop file fix from Andrej Kacian (#165149). Removed
  eutils from inherited eclasses. Deleted old ebuild.

  29 Oct 2006; Diego Pettenò <flameeyes@gentoo.org>
  filelight-1.0_rc2.ebuild:
  Add ~x86-fbsd keyword.

  25 Sep 2006; <blubb@gentoo.org> filelight-1.0_rc2.ebuild:
  stable on amd64

  24 Sep 2006; Michael Hanselmann <hansmi@gentoo.org>
  filelight-1.0_rc2.ebuild:
  Stable on ppc.

  21 Sep 2006; <ticho@gentoo.org> filelight-1.0_rc2.ebuild:
  Stable on x86, bug #146212.

*filelight-1.0_rc2 (23 Aug 2006)

  23 Aug 2006; Carsten Lohrke <carlo@gentoo.org> +filelight-1.0_rc2.ebuild:
  Version bump.

*filelight-1.0_rc1 (19 Aug 2006)

  19 Aug 2006; Carsten Lohrke <carlo@gentoo.org> +filelight-1.0_rc1.ebuild:
  Version bump.

  25 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
  filelight-1.0_beta6.ebuild:
  Remove configure to force autotools rebuild (the pic patch changes
  Makefile.am).

  25 Jun 2005; Aron Griffis <agriffis@gentoo.org>
  filelight-1.0_beta6.ebuild:
  stable on amd64

  05 Jun 2005; Michael Hanselmann <hansmi@gentoo.org>
  filelight-1.0_beta6.ebuild:
  Stable on ppc.

  21 Jan 2005; Carsten Lohrke <carlo@gentoo.org> filelight-1.0_beta6.ebuild:
  stable on x86

*filelight-1.0_beta6 (30 Nov 2004)

  30 Nov 2004; Carsten Lohrke <carlo@gentoo.org>
  +files/filelight-1.0_beta6-pic.patch, +filelight-1.0_beta6.ebuild:
  version bump

*filelight-1.0_beta5 (21 Nov 2004)

  21 Nov 2004; Dominik Stadler <centic@gentoo.org>
  +filelight-1.0_beta5.ebuild:
  Add new Version 1.0beta5

*filelight-1.0_beta4 (10 Nov 2004)
