@@ -7,14 +7,14 @@ EBUILD filelight-1.0.ebuild 633 RMD160 d087f3315b7d8eb17c0a21d1196dd058d29a87f8 
 MD5 587652fdc2681c16b24d10da527dddca filelight-1.0.ebuild 633
 RMD160 d087f3315b7d8eb17c0a21d1196dd058d29a87f8 filelight-1.0.ebuild 633
 SHA256 da2c42d328ac51ed81ae6df6d7d57b1b308d270a0783237047b380c7ffb568ab filelight-1.0.ebuild 633
-EBUILD filelight-1.0_rc2.ebuild 589 RMD160 6ecc0c70f1de7cf4b81697fa96def347d83c8997 SHA1 04efe6bd2076355f5497ad19a5982a61a4245d32 SHA256 14673842cd9819a05e62783194dc18ad50f9b8f4bdba80001bea0c39d7c30831
-MD5 b9fe64d6a8624f189f0fbf237397a654 filelight-1.0_rc2.ebuild 589
-RMD160 6ecc0c70f1de7cf4b81697fa96def347d83c8997 filelight-1.0_rc2.ebuild 589
-SHA256 14673842cd9819a05e62783194dc18ad50f9b8f4bdba80001bea0c39d7c30831 filelight-1.0_rc2.ebuild 589
-MISC ChangeLog 4248 RMD160 da96436bf292eef541a4cc65a8dae0e154b842cf SHA1 1100b3f585b375de9990536ed486d2e299ecbd60 SHA256 fd011af2904fc3209f6e623584dad87495e28afdc127ace0acb8c5391b516401
-MD5 c2fa473ea275904f9092620c176ec917 ChangeLog 4248
-RMD160 da96436bf292eef541a4cc65a8dae0e154b842cf ChangeLog 4248
-SHA256 fd011af2904fc3209f6e623584dad87495e28afdc127ace0acb8c5391b516401 ChangeLog 4248
+EBUILD filelight-1.0_rc2.ebuild 677 RMD160 9f417c10c97e063857776cebe1408c64eca83ef7 SHA1 2d655925b96448a54b8d66f0378590f517b6a40a SHA256 026d017277bfbb194d7733c8fffb71d262c676a408efd51d693208bf882f46ae
+MD5 4b17c16dedf75c76753154be2f138115 filelight-1.0_rc2.ebuild 677
+RMD160 9f417c10c97e063857776cebe1408c64eca83ef7 filelight-1.0_rc2.ebuild 677
+SHA256 026d017277bfbb194d7733c8fffb71d262c676a408efd51d693208bf882f46ae filelight-1.0_rc2.ebuild 677
+MISC ChangeLog 4350 RMD160 a9361f26c78f2bc023eea4a8a666ed80e485ac42 SHA1 dc7b14a4cb32776dd929462136b2d15918882b92 SHA256 3dc484e7ac2eac07b58bdcc94ebc9996ae32374cc944e0acedb989e92857e8c3
+MD5 dc63dae55a5a8cdc380632cebff4656b ChangeLog 4350
+RMD160 a9361f26c78f2bc023eea4a8a666ed80e485ac42 ChangeLog 4350
+SHA256 3dc484e7ac2eac07b58bdcc94ebc9996ae32374cc944e0acedb989e92857e8c3 ChangeLog 4350
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
 MD5 acc03a4b12bb0433a57e95bd253b9501 metadata.xml 156
 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 metadata.xml 156
@@ -28,7 +28,7 @@ SHA256 d2e515d57a843b5c47441f938840d5852cee7cf8fdb92e6e43cfb51d6f6ac734 files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.6 (GNU/Linux)
 
-iD8DBQFFxSW3exDpKttj3ykRAkjoAJ0aTEpHC+Vg2vn4UL/HmxtJ3X7bUwCfRFTf
-DSRfcEgiFr8atrLIdgXqbxQ=
-=Vztm
+iD8DBQFFxcaKexDpKttj3ykRAuLYAJ9U/uCb0YhWMy1iPJbD3mR17ubOewCfZeZg
+mVGYPi3E/h7dEYL/h/WErGg=
+=0ZIr
 -----END PGP SIGNATURE-----
