@@ -1,8 +1,8 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/filelight-1.0_rc2.ebuild,v 1.5 2006/10/29 01:11:09 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/filelight-1.0_rc2.ebuild,v 1.6 2007/02/04 11:35:55 troll Exp $
 
-inherit kde eutils
+inherit kde
 
 MY_P="${P/_/-}"
 S="${WORKDIR}/${P%_*}"
@@ -17,3 +17,8 @@ KEYWORDS="amd64 ~hppa ppc ~sparc x86 ~x86-fbsd"
 IUSE=""
 
 need-kde 3.4
+
+src_unpack() {
+	kde_src_unpack
+	sed -i -e 's/Generic Name/GenericName/' ${S}/misc/${PN}.desktop
+}
